<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/h1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FHI"
        android:padding="15dp" 
        android:textSize = "17sp" 
        android:textColor="#80ff0000"  />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FI"
        android:paddingLeft="30dp"
        android:paddingRight="15dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SI"
        android:paddingLeft="30dp"
         android:paddingRight="15dp" />
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TI"
        android:paddingLeft="30dp"
         android:paddingRight="15dp" />
    
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FoI"
        android:paddingLeft="30dp"
         android:paddingRight="15dp" />
    
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FiI"
        android:paddingLeft="30dp"
         android:paddingRight="15dp" />
    
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SiI"
        android:paddingLeft="30dp"
         android:paddingRight="15dp" />
    
    <TextView
        android:id="@+id/h7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SHI"
        android:padding="15dp"
        android:textColor="#80ff0000"
        android:textSize = "17sp"  />
    
    
    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SFI"
        android:paddingLeft="30dp"
         android:paddingRight="15dp" />
    
    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SSI"
        android:paddingLeft="30dp"
         android:paddingRight="15dp" />
    
      <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/STI"
        android:paddingLeft="30dp"
         android:paddingRight="15dp" />
      
        <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SFoI"
        android:paddingLeft="30dp"
         android:paddingRight="15dp" />
        
          <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SFiI"
        android:paddingLeft="30dp"
         android:paddingRight="15dp" />
          
            <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SSiI"
        android:paddingLeft="30dp"
         android:paddingRight="15dp"
         android:paddingBottom="10dp" />

</LinearLayout>
</ScrollView>